--- a/page10.html
+++ b/page10.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-15" data-rv-view="1530">
+<section id="ext_menu-15" data-rv-view="2196">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1t" data-rv-view="1528" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website for free</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1t" data-rv-view="2194" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-1s" data-rv-view="1532" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-1s" data-rv-view="2198" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
