--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-1" data-rv-view="3028" style="background-image: url(assets/images/minipanel2aca3-2000x1333.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-1" data-rv-view="3028" style="background-image: url(assets/images/minipanel2aca3-2000x1333.jpg);">
 
     
 
@@ -98,7 +98,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><strong>Over mezelf</strong></p><p><br></p><p>studies </p><p>2013-2015 Maricolen, Brugge</p><p>2015-2017 Luca school of arts, Gent</p><p><br></p><p><br></p><p>Mijn inspiratiebron is in zijn brede zin de natuur. Ik experimenteer met textuur, structuur, vormen, lijnen en kleuren. Ik probeer een nieuwe intrepretatie te vinden van een beeld in een landschap en speel met elementen van de natuur.</p><p><br></p></div>
+            <div class="col-xs-12 lead"><p><strong>Over mezelf</strong></p><p><br></p><p>studies </p><p>2013-2015 Maricolen, Brugge</p><p>2015-2017 Luca school of arts, Gent</p><p><br></p><p><br></p><p>Mijn inspiratiebron is in zijn brede zin de natuur. Ik experimenteer met textuur, structuur, vormen, lijnen en kleuren. Ik probeer een nieuwe interpretatie te vinden van een beeld in een landschap en speel met elementen van de natuur.</p><p><br></p></div>
         </div>
     </div>
 
@@ -162,7 +162,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="rx0AQFzHZotnk8p0EMsFWtXTep4Rnc9ZzqE8bXSwlToxDHsPZNFrkC68cHzRUvHppMZsi/AtO1dMMw2UjEz4BrsdDNAFeiG617wT+MOZFLvBx8ubIYP0yoWjQfqeO8UJ" data-form-email="true">
+                    <input type="hidden" value="ZD7cnhIZHRjlOZJgTdZfyScDI+emRM+Sd3vuC+znsQG4XouEtxtwy1XhFZBrec24zb4ZebWCwdgFtDIxj9uAqYConhficFtITldX1L1rpO/1UGH9ANcuR8EdxqzF5DnS" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2-email">Email<span class="form-asterisk">*</span></label>
