--- a/mail.html
+++ b/mail.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="3134">
+<section id="ext_menu-0" data-rv-view="2195">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web creator</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="3125" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="2186" style="background-color: rgb(204, 204, 204); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -80,8 +80,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p><strong>Addres</strong><br>werkplaats:<br>Alexianenplein 1<br>9000 Gent<br><br><br>
-<strong>Contact</strong><br>
-Email: saar.cools@hotmail.com</p>
+<strong>Contact</strong><strong><br></strong><br>website :&nbsp;<a href="http://www.lucaschilderkunstgent.be/" target="_blank" class="text-white"> http://www.lucaschilderkunstgent.be/</a><br>Email: saar.cools@hotmail.com</p>
                     </div>
                     <div class="col-sm-6"></div>
                 </div>
@@ -91,7 +90,7 @@ Email: saar.cools@hotmail.com</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="VLRcttA29Vi/d/35Fcn6PIvhTPjLSB1b6KNcAdQe6yogNEVvAK178sWEevoftiElKEdofi5+T876hEht5SgeqGtcY00kyiFrZqllxVOaA/WenVjp2HsIm+R0LeP9JUf2" data-form-email="true">
+                    <input type="hidden" value="b7wG175wRLGrPKirXqV//EWQB7K8UzglWXtqiT7C3TTNFCKF1kxGxCcAT8uv3n2TtmONTmOMlVHxO8lpQaZuu8wXzxdwgEEQ3Bw3+vxZneZkZFyGy1OWmyoHW+FpDoCd" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
@@ -102,7 +101,7 @@ Email: saar.cools@hotmail.com</p>
                         <label class="form-control-label" for="contacts4-e-message">Message</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-e-message"></textarea>
                     </div>
-                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-black">Contacteer me</button></div>
+                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-white">Contacteer me</button></div>
                 </form>
             </div>
         </div>
