--- a/page14.html
+++ b/page14.html
@@ -41,7 +41,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="3045">
+<section id="ext_menu-0" data-rv-view="2327">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1i" data-rv-view="3047" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1i" data-rv-view="2329" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -136,7 +136,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-23" data-rv-view="3050" style="background-image: url(assets/images/detailwork2-1968x1392.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-23" data-rv-view="2332" style="background-image: url(assets/images/detailwork2-1968x1392.jpg);">
 
     
 
